--- a/sources/UI/ConfigCartons.ui
+++ b/sources/UI/ConfigCartons.ui
@@ -40,42 +40,6 @@
   <property name="modal">
    <bool>true</bool>
   </property>
-  <widget class="QDialogButtonBox" name="buttonBox">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>420</y>
-     <width>631</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>631</width>
-     <height>32</height>
-    </size>
-   </property>
-   <property name="toolTip">
-    <string>Annuler: fermer la fenetre sans sauvegarder. Ok: fermer la fenetre et sauvegarder. Appliquer: Sauvegarder
-     sans fermer la fenêtre.
-    </string>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-   <property name="centerButtons">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
@@ -173,20 +137,23 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>80</y>
-      <width>141</width>
-      <height>23</height>
+         <y>80</y>
+         <width>141</width>
+         <height>23</height>
      </rect>
     </property>
-    <property name="smallDecimalPoint">
-     <bool>true</bool>
-    </property>
-    <property name="digitCount">
-     <number>9</number>
-    </property>
-    <property name="intValue" stdset="0">
-     <number>0</number>
-    </property>
+       <property name="smallDecimalPoint">
+           <bool>true</bool>
+       </property>
+       <property name="digitCount">
+           <number>9</number>
+       </property>
+       <property name="segmentStyle">
+           <enum>QLCDNumber::Flat</enum>
+       </property>
+       <property name="intValue" stdset="0">
+           <number>0</number>
+       </property>
    </widget>
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
@@ -230,7 +197,7 @@
      <string>Défini le nombre de carton à généreer aléatoiremnt.</string>
     </property>
     <property name="maximum">
-     <number>400000000</number>
+        <number>200000000</number>
     </property>
     <property name="stepType">
      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
@@ -254,12 +221,12 @@
      <rect>
       <x>290</x>
       <y>20</y>
-      <width>131</width>
+         <width>141</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>(maximu: 4 000 000 000)</string>
+        <string>(maximum: 2 000 000 000)</string>
     </property>
    </widget>
    <widget class="QPushButton" name="UIGenerateBtn">
@@ -502,10 +469,7 @@
      </font>
     </property>
     <property name="buttonSymbols">
-     <enum>QAbstractSpinBox::PlusMinus</enum>
-    </property>
-    <property name="specialValueText">
-     <string/>
+        <enum>QAbstractSpinBox::UpDownArrows</enum>
     </property>
     <property name="minimum">
      <number>30</number>
@@ -1349,17 +1313,56 @@
    <widget class="QCheckBox" name="UIChk_L1_C6">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>80</y>
-      <width>21</width>
-      <height>20</height>
+         <x>430</x>
+         <y>80</y>
+         <width>21</width>
+         <height>20</height>
      </rect>
     </property>
-    <property name="text">
-     <string/>
-    </property>
+       <property name="text">
+           <string/>
+       </property>
    </widget>
   </widget>
+     <widget class="QPushButton" name="pushButton">
+         <property name="geometry">
+             <rect>
+                 <x>170</x>
+                 <y>420</y>
+                 <width>91</width>
+                 <height>31</height>
+             </rect>
+         </property>
+         <property name="text">
+             <string>Ok</string>
+         </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_2">
+         <property name="geometry">
+             <rect>
+                 <x>280</x>
+                 <y>420</y>
+                 <width>91</width>
+                 <height>31</height>
+             </rect>
+         </property>
+         <property name="text">
+             <string>Appliquer</string>
+         </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_3">
+         <property name="geometry">
+             <rect>
+                 <x>390</x>
+                 <y>420</y>
+                 <width>91</width>
+                 <height>31</height>
+             </rect>
+         </property>
+         <property name="text">
+             <string>Annuler</string>
+         </property>
+     </widget>
  </widget>
  <tabstops>
   <tabstop>UICell_L1_C0</tabstop>
@@ -1403,22 +1406,6 @@
  </tabstops>
  <resources/>
  <connections>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>clicked(QAbstractButton*)</signal>
-   <receiver>ConfigCartons</receiver>
-   <slot>BottomButton(QAbstractButton*)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>325</x>
-     <y>435</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>460</x>
-     <y>454</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>pushButton_5</sender>
    <signal>clicked()</signal>
@@ -2353,24 +2340,91 @@
    <receiver>ConfigCartons</receiver>
    <slot>UpdateGrid()</slot>
    <hints>
-    <hint type="sourcelabel">
-     <x>150</x>
-     <y>266</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>-4</x>
-     <y>274</y>
-    </hint>
+       <hint type="sourcelabel">
+           <x>150</x>
+           <y>266</y>
+       </hint>
+       <hint type="destinationlabel">
+           <x>-4</x>
+           <y>274</y>
+       </hint>
    </hints>
   </connection>
+     <connection>
+         <sender>pushButton</sender>
+         <signal>clicked()</signal>
+         <receiver>ConfigCartons</receiver>
+         <slot>ClicOk()</slot>
+         <hints>
+             <hint type="sourcelabel">
+                 <x>204</x>
+                 <y>439</y>
+             </hint>
+             <hint type="destinationlabel">
+                 <x>218</x>
+                 <y>-9</y>
+             </hint>
+         </hints>
+     </connection>
+     <connection>
+         <sender>pushButton_2</sender>
+         <signal>clicked()</signal>
+         <receiver>ConfigCartons</receiver>
+         <slot>ClicApply()</slot>
+         <hints>
+             <hint type="sourcelabel">
+                 <x>322</x>
+                 <y>428</y>
+             </hint>
+             <hint type="destinationlabel">
+                 <x>301</x>
+                 <y>-12</y>
+             </hint>
+         </hints>
+     </connection>
+     <connection>
+         <sender>pushButton_3</sender>
+         <signal>clicked()</signal>
+         <receiver>ConfigCartons</receiver>
+         <slot>ClicCancel()</slot>
+         <hints>
+             <hint type="sourcelabel">
+                 <x>424</x>
+                 <y>430</y>
+             </hint>
+             <hint type="destinationlabel">
+                 <x>384</x>
+                 <y>-20</y>
+             </hint>
+         </hints>
+     </connection>
+     <connection>
+         <sender>UIListName</sender>
+         <signal>editingFinished()</signal>
+         <receiver>ConfigCartons</receiver>
+         <slot>updateName()</slot>
+         <hints>
+             <hint type="sourcelabel">
+                 <x>286</x>
+                 <y>31</y>
+             </hint>
+             <hint type="destinationlabel">
+                 <x>341</x>
+                 <y>-11</y>
+             </hint>
+         </hints>
+     </connection>
  </connections>
- <slots>
-  <slot>LoadFile()</slot>
-  <slot>Generate()</slot>
-  <slot>LoadFromList()</slot>
-  <slot>SaveInList()</slot>
-  <slot>LoadLine()</slot>
-  <slot>UpdateGrid()</slot>
-  <slot>BottomButton(QAbstractButton*)</slot>
- </slots>
+    <slots>
+        <slot>LoadFile()</slot>
+        <slot>Generate()</slot>
+        <slot>LoadFromList()</slot>
+        <slot>SaveInList()</slot>
+        <slot>LoadLine()</slot>
+        <slot>UpdateGrid()</slot>
+        <slot>ClicOk()</slot>
+        <slot>ClicApply()</slot>
+        <slot>ClicCancel()</slot>
+        <slot>updateName()</slot>
+    </slots>
 </ui>
