--- a/sources/UI/EvenementConfig.ui
+++ b/sources/UI/EvenementConfig.ui
@@ -26,6 +26,13 @@
                         <string>Configuration événement</string>
                     </property>
                     <layout class="QGridLayout" name="gridLayout">
+                        <item row="2" column="0">
+                            <widget class="QLabel" name="label_5">
+                                <property name="text">
+                                    <string>Logo de l'événement:</string>
+                                </property>
+                            </widget>
+                        </item>
                         <item row="0" column="0">
                             <widget class="QLabel" name="label">
                                 <property name="text">
@@ -33,12 +40,8 @@
                                 </property>
                             </widget>
                         </item>
-                        <item row="0" column="1">
-                            <widget class="QLineEdit" name="EventName">
-                                <property name="toolTip">
-                                    <string>Définir le nom de l'événement organisé.</string>
-                                </property>
-                            </widget>
+                        <item row="2" column="2">
+                            <widget class="QLineEdit" name="EventLogo"/>
                         </item>
                         <item row="1" column="0">
                             <widget class="QLabel" name="label_2">
@@ -47,10 +50,36 @@
                                 </property>
                             </widget>
                         </item>
-                        <item row="1" column="1">
+                        <item row="2" column="3">
+                            <widget class="QPushButton" name="SearchLogo">
+                                <property name="sizePolicy">
+                                    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                                        <horstretch>0</horstretch>
+                                        <verstretch>0</verstretch>
+                                    </sizepolicy>
+                                </property>
+                                <property name="maximumSize">
+                                    <size>
+                                        <width>24</width>
+                                        <height>16777215</height>
+                                    </size>
+                                </property>
+                                <property name="text">
+                                    <string>...</string>
+                                </property>
+                            </widget>
+                        </item>
+                        <item row="1" column="2" colspan="2">
                             <widget class="QLineEdit" name="EventLocation">
                                 <property name="toolTip">
                                     <string>Définir le lieu de l'événement organisé.</string>
+                                </property>
+                            </widget>
+                        </item>
+                        <item row="0" column="2" colspan="2">
+                            <widget class="QLineEdit" name="EventName">
+                                <property name="toolTip">
+                                    <string>Définir le nom de l'événement organisé.</string>
                                 </property>
                             </widget>
                         </item>
@@ -71,7 +100,7 @@
                             </widget>
                         </item>
                         <item row="0" column="1">
-                            <widget class="QLineEdit" name="lineEdit"/>
+                            <widget class="QLineEdit" name="OrgaName"/>
                         </item>
                         <item row="0" column="2" colspan="2">
                             <spacer name="horizontalSpacer_5">
@@ -94,10 +123,10 @@
                             </widget>
                         </item>
                         <item row="1" column="1">
-                            <widget class="QLineEdit" name="lineEdit_2"/>
+                            <widget class="QLineEdit" name="OrgaLogo"/>
                         </item>
                         <item row="1" column="2">
-                            <widget class="QPushButton" name="pushButton">
+                            <widget class="QPushButton" name="SearchOrgaLogo">
                                 <property name="sizePolicy">
                                     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                                         <horstretch>0</horstretch>
@@ -132,11 +161,17 @@
                 </widget>
             </item>
             <item>
-                <widget class="QGroupBox" name="groupBox_2">
-                    <property name="title">
-                        <string>Autres options</string>
+                <spacer name="verticalSpacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
                     </property>
-                </widget>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>40</height>
+                        </size>
+                    </property>
+                </spacer>
             </item>
             <item>
                 <widget class="QFrame" name="frame">
@@ -246,6 +281,18 @@
             </item>
         </layout>
     </widget>
+    <tabstops>
+        <tabstop>EventName</tabstop>
+        <tabstop>EventLocation</tabstop>
+        <tabstop>EventLogo</tabstop>
+        <tabstop>SearchLogo</tabstop>
+        <tabstop>OrgaName</tabstop>
+        <tabstop>OrgaLogo</tabstop>
+        <tabstop>SearchOrgaLogo</tabstop>
+        <tabstop>ButtonOk</tabstop>
+        <tabstop>ButtonApply</tabstop>
+        <tabstop>ButtonCancel</tabstop>
+    </tabstops>
     <resources/>
     <connections>
         <connection>
@@ -296,10 +343,44 @@
                 </hint>
             </hints>
         </connection>
+        <connection>
+            <sender>SearchOrgaLogo</sender>
+            <signal>clicked()</signal>
+            <receiver>EvenementConfig</receiver>
+            <slot>actSearchOrgaLogo()</slot>
+            <hints>
+                <hint type="sourcelabel">
+                    <x>361</x>
+                    <y>196</y>
+                </hint>
+                <hint type="destinationlabel">
+                    <x>613</x>
+                    <y>152</y>
+                </hint>
+            </hints>
+        </connection>
+        <connection>
+            <sender>SearchLogo</sender>
+            <signal>clicked()</signal>
+            <receiver>EvenementConfig</receiver>
+            <slot>actSearchLogo()</slot>
+            <hints>
+                <hint type="sourcelabel">
+                    <x>586</x>
+                    <y>107</y>
+                </hint>
+                <hint type="destinationlabel">
+                    <x>614</x>
+                    <y>109</y>
+                </hint>
+            </hints>
+        </connection>
     </connections>
     <slots>
         <slot>actOk()</slot>
         <slot>actApply()</slot>
         <slot>actCancel()</slot>
+        <slot>actSearchOrgaLogo()</slot>
+        <slot>actSearchLogo()</slot>
     </slots>
 </ui>
