--- a/sources/UI/EvenementConfig.ui
+++ b/sources/UI/EvenementConfig.ui
@@ -41,7 +41,11 @@
                             </widget>
                         </item>
                         <item row="2" column="2">
-                            <widget class="QLineEdit" name="EventLogo"/>
+                            <widget class="QLineEdit" name="EventLogo">
+                                <property name="toolTip">
+                                    <string>Un fichier d'image pour le logo de l'événement.</string>
+                                </property>
+                            </widget>
                         </item>
                         <item row="1" column="0">
                             <widget class="QLabel" name="label_2">
@@ -63,6 +67,9 @@
                                         <width>24</width>
                                         <height>16777215</height>
                                     </size>
+                                </property>
+                                <property name="toolTip">
+                                    <string>Ouvre une boite de dialogue de selection d'une image de logo.</string>
                                 </property>
                                 <property name="text">
                                     <string>...</string>
@@ -100,7 +107,11 @@
                             </widget>
                         </item>
                         <item row="0" column="1">
-                            <widget class="QLineEdit" name="OrgaName"/>
+                            <widget class="QLineEdit" name="OrgaName">
+                                <property name="toolTip">
+                                    <string>Le nom de l'organisateur de l'événement.</string>
+                                </property>
+                            </widget>
                         </item>
                         <item row="0" column="2" colspan="2">
                             <spacer name="horizontalSpacer_5">
@@ -109,7 +120,7 @@
                                 </property>
                                 <property name="sizeHint" stdset="0">
                                     <size>
-                                        <width>247</width>
+                                        <width>100</width>
                                         <height>20</height>
                                     </size>
                                 </property>
@@ -123,7 +134,11 @@
                             </widget>
                         </item>
                         <item row="1" column="1">
-                            <widget class="QLineEdit" name="OrgaLogo"/>
+                            <widget class="QLineEdit" name="OrgaLogo">
+                                <property name="toolTip">
+                                    <string>Fichier d'image définissant le logo de l'organisateur.</string>
+                                </property>
+                            </widget>
                         </item>
                         <item row="1" column="2">
                             <widget class="QPushButton" name="SearchOrgaLogo">
@@ -139,6 +154,9 @@
                                         <height>16777215</height>
                                     </size>
                                 </property>
+                                <property name="toolTip">
+                                    <string>Ouvre une boite de dialogue pour choisir le log.</string>
+                                </property>
                                 <property name="text">
                                     <string>...</string>
                                 </property>
@@ -151,7 +169,7 @@
                                 </property>
                                 <property name="sizeHint" stdset="0">
                                     <size>
-                                        <width>217</width>
+                                        <width>100</width>
                                         <height>20</height>
                                     </size>
                                 </property>
